--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,97 @@
 /* Other rules */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #151515;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: 40px;
+  margin-top: 50px;
+  text-align: center;
+  font-weight: 600;
+}
+
+h2 {
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+/* Header */
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 30px;
+  border-bottom: #ff4655 2px solid;
+}
+
+nav {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
+}
+
+header button {
+  font-size: 20px;
+  padding: 5px 15px;
+  background-color: #151515;
+  border: 1px solid #151515;
+  color: white;
+}
+
+.login-button {
+  background-color: #ff4655;
+  border: 1px solid #ff4655;
+  border-radius: 10px;
+}
+/* main */
+
+main {
+  width: 90vw;
+  margin: 0 auto;
+}
+
+.allGames {
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 20px;
+}
+
+.game {
+  width: calc((100% / 5) - 60px);
+  height: 250px;
+  border: 1px solid #202020;
+  border-radius: 10px;
+  background-color: #202020;
+  display: flex;
+  flex-direction: column;
+}
+
+.pictureContainer {
+  flex: 4;
+}
+
+.game img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.titleContainer {
+  flex: 1;
+  padding-left: 10px;
+  display: flex;
+  align-items: center;
+}
