--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,14 @@
 }
 
 body {
-  background-color: #151515;
+  background-color: #1f2023;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
   font-size: 40px;
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
   font-weight: 600;
 }
@@ -44,8 +44,8 @@ nav {
 header button {
   font-size: 20px;
   padding: 5px 15px;
-  background-color: #151515;
-  border: 1px solid #151515;
+  background-color: #1f2023;
+  border: 1px solid #1f2023;
   color: white;
 }
 
@@ -74,19 +74,17 @@ main {
   height: 250px;
   border: 1px solid #202020;
   border-radius: 10px;
-  background-color: #202020;
+  background-color: #151515;
   display: flex;
   flex-direction: column;
-}
-
-.pictureContainer {
-  flex: 4;
+  cursor: pointer;
 }
 
 .game img {
-  width: 100%;
-  height: 100%;
+  flex: 4;
   object-fit: cover;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .titleContainer {
@@ -94,4 +92,90 @@ main {
   padding-left: 10px;
   display: flex;
   align-items: center;
+}
+
+/* detail */
+
+.detail-wrapper {
+  width: 90vw;
+  height: 100vh;
+  padding-top: 50px;
+  margin: 0 auto;
+}
+
+.detail-container {
+  width: 100%;
+  height: 50vh;
+}
+
+.detail-container h2 {
+  margin-bottom: 10px;
+}
+
+.game-detail-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 20px;
+}
+
+.game-detail-container img {
+  width: 50%;
+  border: 1px solid #151515;
+  border-radius: 10px;
+}
+
+.detail-game {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.detail-button-container {
+  width: 100%;
+}
+
+.detail-button-container button {
+  background-color: #151515;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 20px;
+  font-size: 15px;
+}
+
+.detail-button-container button:nth-child(1) {
+  margin-right: 25px;
+}
+
+.detail-info-container {
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  gap: 30px;
+  font-size: 15px;
+}
+
+.col-1 {
+  width: 50%;
+}
+
+.col-2 {
+  width: 50%;
+}
+
+.detail-p {
+  margin-top: 20px;
+}
+
+.detail-p p:first-child {
+  margin-bottom: 4px;
+}
+
+.text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
