--- a/src/App.css
+++ b/src/App.css
@@ -98,14 +98,15 @@ main {
 
 .detail-wrapper {
   width: 90vw;
-  height: 100vh;
   padding-top: 50px;
   margin: 0 auto;
 }
 
 .detail-container {
   width: 100%;
-  height: 50vh;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
 }
 
 .detail-container h2 {
@@ -120,15 +121,17 @@ main {
 }
 
 .game-detail-container img {
-  width: 50%;
+  flex: 1;
+
   border: 1px solid #151515;
   border-radius: 10px;
 }
 
 .detail-game {
-  width: 50%;
+  flex: 1.5;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .detail-button-container {
@@ -149,7 +152,7 @@ main {
 }
 
 .detail-info-container {
-  margin-top: 20px;
+  margin-top: 30px;
   width: 100%;
   display: flex;
   gap: 30px;
@@ -178,4 +181,7 @@ main {
   display: -webkit-box;
   -webkit-line-clamp: 3; /* number of lines to show */
   -webkit-box-orient: vertical;
+}
+
+.similar-games {
 }
