--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@ main {
 
 .detail-container {
   width: 100%;
-  height: 300px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -115,20 +115,20 @@ main {
 
 .game-detail-container {
   width: 100%;
-  height: 100%;
+  height: 300px;
   display: flex;
   gap: 20px;
 }
 
 .game-detail-container img {
-  flex: 1;
-
+  width: 35%;
+  height: 300px;
   border: 1px solid #151515;
   border-radius: 10px;
 }
 
 .detail-game {
-  flex: 1.5;
+  width: 65%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -163,12 +163,20 @@ main {
   width: 50%;
 }
 
+.col-1 p:first-child {
+  margin-bottom: 5px;
+}
+
 .col-2 {
   width: 50%;
 }
 
+.col-2 p:first-child {
+  margin-bottom: 5px;
+}
+
 .detail-p {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .detail-p p:first-child {
@@ -184,4 +192,6 @@ main {
 }
 
 .similar-games {
+  margin-top: 50px;
+  text-align: center;
 }
