--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,7 @@ main {
   color: white;
   padding: 10px 20px;
   font-size: 15px;
+  cursor: pointer;
 }
 
 .detail-button-container button:nth-child(1) {
@@ -347,4 +348,25 @@ main {
 .login-wrapper form p {
   margin: 10px 0;
   cursor: pointer;
+}
+
+/* My collection */
+
+.my-collection {
+  width: 90vw;
+  margin: 0 auto;
+}
+
+.my-collection h2 {
+  text-align: center;
+  font-size: 30px;
+  margin: 30px 0 50px 0;
+}
+
+.my-collection-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px 20px;
 }
