--- a/src/App.css
+++ b/src/App.css
@@ -155,14 +155,14 @@ main {
 
 .game-detail-container {
   width: 100%;
-  height: 300px;
+  height: 330px;
   display: flex;
   gap: 20px;
 }
 
 .game-detail-container img {
   width: 35%;
-  height: 300px;
+  height: 100%;
   border: 1px solid #151515;
   border-radius: 10px;
   object-fit: cover;
@@ -248,6 +248,62 @@ main {
   gap: 20px;
 }
 
+/* detail / reviews */
+
+.reviews-container {
+  margin: 50px auto;
+  width: 90vw;
+}
+
+.reviews-container h2 {
+  margin: 30px auto;
+  text-align: center;
+}
+
+.review-wrapper {
+  width: 100%;
+}
+
+.review-detail-wrapper {
+  margin: 0 auto 20px auto;
+  width: 40%;
+  background-color: #404040;
+  border: 1px solid #404040;
+  border-radius: 10px;
+  padding: 10px 15px;
+}
+
+.review-detail-wrapper h4 {
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.review-detail-wrapper p,
+span {
+  font-size: 20px;
+}
+
+.review-detail-wrapper h4,
+p {
+  margin-bottom: 20px;
+}
+
+.review-detail-wrapper div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.plus {
+  color: green;
+  cursor: pointer;
+}
+
+.moins {
+  color: tomato;
+  cursor: pointer;
+}
+
 /* Search */
 
 .search-result-wrapper {
@@ -290,6 +346,8 @@ main {
 .search-result p {
   margin-top: 10px;
 }
+
+/* Login */
 
 .login-wrapper {
   width: 30vw;
@@ -369,4 +427,78 @@ main {
   justify-content: center;
   flex-wrap: wrap;
   gap: 40px 20px;
+}
+
+/* Review */
+
+.review-wrapper {
+  width: 90vw;
+  margin: 0 auto;
+}
+
+.review-wrapper form {
+  width: 50%;
+  margin: 0 auto;
+  background-color: #404040;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #1f2023;
+  border-radius: 5px;
+}
+
+.review-header {
+  margin: 100px auto 0 auto;
+  width: 50%;
+  background-color: #1f2023;
+  padding: 5px 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.review-header span {
+  cursor: pointer;
+}
+
+.review-input-wrapper {
+  margin: 30px auto;
+  width: 80%;
+}
+
+.review-input-wrapper:nth-child(2) {
+  margin: 20px auto 30px auto;
+  width: 80%;
+}
+
+.review-input-wrapper input,
+textarea {
+  margin-top: 10px;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+.review-input-wrapper input {
+  height: 35px;
+}
+
+.submit-container {
+  width: 80%;
+  margin: 10px auto;
+  text-align: right;
+}
+
+.submit-review {
+  background-color: #ff4655;
+  border: 1px solid #ff4655;
+  border-radius: 5px;
+  padding: 5px 0;
+  width: 20%;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
