--- a/src/App.css
+++ b/src/App.css
@@ -304,6 +304,12 @@ p {
   cursor: pointer;
 }
 
+.no-review {
+  padding-top: 20px;
+  text-align: center;
+  font-size: 25px;
+}
+
 /* Search */
 
 .search-result-wrapper {
@@ -502,3 +508,5 @@ textarea {
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
+
+/* userprofil */
