--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,29 @@ main {
   align-items: center;
 }
 
+.pagination {
+  margin: 20px auto;
+  text-align: center;
+}
+
+.pagination button {
+  background-color: black;
+  border: 1px solid white;
+  border-radius: 10px;
+  color: white;
+  padding: 7px 10px 5px 10px;
+  font-size: 20px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: background-color 1s, color 1s, transform 1s;
+}
+
+.pagination button:hover {
+  background-color: #fff;
+  color: black;
+}
+
 /* detail */
 
 .detail-wrapper {
