--- a/src/App.css
+++ b/src/App.css
@@ -370,7 +370,9 @@ p {
   margin-top: 200px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .search-result {
