--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ h3 {
 /* Header */
 
 header {
-  border-bottom: #ff4655 2px solid;
+  border-bottom: #ff4655 1px solid;
   padding: 15px 0;
 }
 
@@ -123,6 +123,11 @@ main {
   display: flex;
   flex-direction: column;
   cursor: pointer;
+  transition: border 0.5s, color 0.5s, transform 0.5s;
+}
+
+.game:hover {
+  border: 3px solid #ff4655;
 }
 
 .game img {
@@ -135,9 +140,9 @@ main {
 
 .titleContainer {
   width: 100%;
-  height: 20%;
-  padding-left: 10px;
+  padding: 10px;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
