--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,9 @@ h3 {
 header {
   border-bottom: #ff4655 1px solid;
   padding: 15px 0;
+  position: sticky;
+  top: 0px;
+  background-color: #1f2023;
 }
 
 .header-wrapper {
@@ -69,7 +72,7 @@ nav {
 }
 
 header button {
-  font-size: 3.5vh;
+  font-size: 35px;
   padding: 5px 15px;
   background-color: #1f2023;
   border: 1px solid #1f2023;
@@ -426,6 +429,7 @@ p {
 }
 
 .login-wrapper form div input {
+  padding-left: 10px;
   margin-top: 10px;
   width: 100%;
   height: 30px;
@@ -585,6 +589,12 @@ textarea {
   cursor: pointer;
 }
 
+.user-profil-wrapper h3 {
+  margin-top: 15px;
+  margin-bottom: 20px;
+  font-size: 30px;
+}
+
 .user-profil-wrapper p {
   margin: 20px 0;
   font-size: 3.5vh;
@@ -661,6 +671,9 @@ input:focus + label {
 }
 
 @media (max-width: 768px) {
+  header {
+    height: auto;
+  }
   .header-wrapper {
     flex-direction: column;
     gap: 10px;
@@ -671,16 +684,9 @@ input:focus + label {
     justify-content: center;
     align-items: center;
   }
-
-  nav img {
-    height: 5vh;
-  }
 }
 
 @media (max-width: 600px) {
-  nav img {
-    height: 4.5vh;
-  }
 }
 
 /* ------------- MEDIA QUERIES HOME  -------------------- */
